@@ -1,3 +1,12 @@
+2004-09-21  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/shadow.c (xnshadow_substitute_syscall): No need to
+	compute an expiry date in the setitimer() replacement code.
+
+	* nucleus/pod.c (xnpod_suspend_thread): Immediately unblock the
+	suspended thread if a preposterous timeout is notified by the
+	timer manager.
+
 2004-09-20  Philippe Gerum  <rpm@xenomai.org>
 
 	* nucleus/shadow.c (xnshadow_relax): Feeds
